<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".fragment.AccountFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="6dp"
                android:src="@drawable/campbell"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true" />

            <ImageView
                android:src="@drawable/rounded_style_frame"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:padding="6dp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp"
            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:text="@string/user_name"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/user_mail"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/userNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/user_phone"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp">

        <Button
            android:id="@+id/btn_Account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:drawableLeft="@drawable/ic_person_orange_24dp"
            android:drawablePadding="15dp"
            android:gravity=""
            android:text="@string/btn_account"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:drawableLeft="@drawable/ic_lock_orange_24dp"
            android:drawablePadding="15dp"
            android:gravity=""
            android:text="@string/btn_password"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_Help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:drawableLeft="@drawable/ic_help_orange_24dp"
            android:drawablePadding="15dp"
            android:gravity=""
            android:text="@string/btn_help"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_Info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:drawableLeft="@drawable/ic_info_orange_24dp"
            android:drawablePadding="15dp"
            android:gravity=""
            android:text="@string/btn_info"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="330dp">

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:drawableLeft="@drawable/ic_exit_to_app_orange_24dp"
            android:drawablePadding="15dp"
            android:gravity=""
            android:text="@string/btn_logout"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>
