<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_edit_password"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBackground"
        android:elevation="0dp"
        android:foregroundTint="@color/colorWhite"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="Account"
        app:titleTextColor="@color/colorWhite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/tb_edit_password">

        <ImageView
            android:id="@+id/userPict"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="6dp"
            android:src="@drawable/campbell"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="Full Name"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/edit_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:inputType="text"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorGrey"
                android:text="@string/user_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="Phone Number"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/edit_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:inputType="number"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorGrey"
                android:text="@string/user_phone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="Email"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/edit_userMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:inputType="text"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorGrey"
                android:text="@string/user_mail"/>


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="64dp"
        android:background="@drawable/rounded_style_primary"
        android:text="Save"
        android:textColor="#fff" />

</RelativeLayout>